--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -47,3 +47,17 @@ a {
     color: white; 
     font-size: 32px !important;
 }
+
+canvas{
+    top: 0;
+    position: absolute;
+    z-index:-2;
+    width:100%;
+    height:100%;
+  }
+
+  .volume{
+      right: 15;
+      top: 15;
+      position: absolute;
+  }
